# ToolR

./: .codecov.yml  .codespell.words.ignore  .coveragerc  .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  .rumdl.toml  .rustfmt.toml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  UNRELEASED.md  action.yml  cliff.toml  index.html  mise.toml  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  renovate.json5  requirements-dev.in  requirements-dev.txt  typos.toml
.cargo/: config.toml
.github/: dependabot.yml  env
.mise-tasks/: build-clean.sh  build-toolr-core.sh  build-toolr-py.sh  build-toolr.sh  build.sh  cargo-test.sh  develop-toolr-py.sh  pytest-test.sh
.pre-commit-hooks/: actionlint.sh  check-pipeline-gate-needs.py  gitleaks.sh  pin-github-actions.py  ref-doc-stubs.py  regen-doc-snippets.py  shellcheck.sh
changelog/: index.html
cli/: index.html
cli-files/: project-init-help.txt  project-manifest-rebuild-help.txt  project-venv-lock-help.txt  project-venv-shell-help.txt  project-venv-sync-help.txt  self-build-manifest-help.txt  self-cache-list-help.txt
concepts/: index.html
contributing/: index.html
crates/toolr/: Cargo.toml  pyproject.toml
crates/toolr-core/: Cargo.toml
crates/toolr-core/src/: build_fragment.rs  discovery.rs  docstrings.rs  hash.rs  lib.rs  project.rs
crates/toolr-core/src/argparse/: attach.rs  config.rs  mod.rs  scan.rs
crates/toolr-core/src/cache/: classify.rs  enumerate.rs  hint.rs  init.rs  meta.rs  mod.rs  tests.rs  touch.rs
crates/toolr-core/src/command/: command_test.rs
crates/toolr-core/src/complete/: engine.rs  freshness.rs  install.rs  mod.rs  scripts.rs  tests.rs
crates/toolr-core/src/complete/scripts/: bash.sh  fish.fish  zsh.zsh
crates/toolr-core/src/deps_check/: mod.rs  preflight.rs  probe.rs  tests.rs
crates/toolr-core/src/docstrings/: docstring_test.rs  full_description_test.rs  known_headers_test.rs  tests.rs
crates/toolr-core/src/dynamic/: hash.rs  merge.rs  mod.rs  payload.rs  rebuild.rs  runner.rs  tests.rs
crates/toolr-core/src/execute/: mod.rs  python.rs  signals.rs  spawn.rs  spec.rs  tempfile.rs
crates/toolr-core/src/freshness/: compare.rs  mod.rs  tests.rs
crates/toolr-core/src/manifest/: io.rs  model.rs  tests.rs
crates/toolr-core/src/manifest_build/: rebuild.rs
crates/toolr-core/src/parser/: build.rs  commands.rs  groups.rs  mod.rs  signatures.rs  symbols.rs  types.rs
crates/toolr-core/src/parser/types/: arg_metadata.rs  imports.rs  literals.rs  mod.rs  path_constraints.rs  resolve.rs  supported.rs
crates/toolr-core/src/uv/: discover.rs  install.rs  mod.rs
crates/toolr-core/tests/: schema_version_lockstep.rs  skill_authoring_examples.rs
crates/toolr-py/: Cargo.toml  pyproject.toml
crates/toolr-py/python/toolr/: __init__.py  _context.py  _context.pyi  _decorators.py  _introspect.py  _runner.py  build.py  testing.py
crates/toolr-py/python/toolr/sources/: __init__.py  _dispatch.py  _types.py
crates/toolr-py/python/toolr/types/: __init__.py
crates/toolr-py/python/toolr/utils/: _docstrings.py  _imports.py  _rust_utils.pyi  _signature.py  command.py
crates/toolr-py/src/: lib.rs
crates/toolr/src/: bootstrap.rs  build_manifest_resolve.rs  builtin_completions.rs  cli.rs  dispatch.rs  execute_build.rs  help.rs  init_scaffold.rs  init_templates.rs  main.rs  markdown.rs  project.rs  self_cache.rs  self_cache_prune.rs  value_parsers.rs
crates/toolr/src/init_templates/: example.py.tmpl  pyproject.toml.tmpl
crates/toolr/tests/: build_manifest_cli.rs  cache_fixtures.rs  cache_hint_quiet.rs  cli_smoke.rs  complete_smoke.rs  conflicts_with_dispatch.rs  dispatch_coverage.rs  dynamic_e2e.rs  end_to_end_sync.rs  freshness_dispatch.rs  project_deps_upgrade.rs  project_init.rs  project_venv_add.rs  project_venv_lock.rs  project_venv_path.rs  project_venv_remove.rs  project_venv_run.rs  project_venv_sync.rs  project_venv_upgrade.rs  untrusted_repo.rs  uv_install_offline.rs
crates/toolr/tests/common/: mod.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: cli.rs  main.rs
crates/xtask/src/build_skill_refs/: authoring.rs  ci_setup.rs  mod.rs  packaging.rs
crates/xtask/tests/: coverage.rs  idempotency.rs
docs/: .nav.yml  cli.md  concepts.md  index.md  migration.md  project-config.md  quickstart.md  skills.md  third-party.md
examples/: index.html
examples/plugin-package/: README.md  pyproject.toml
examples/plugin-package/src/toolr_example_plugin/: __init__.py  commands.py  toolr-manifest.json
installation/: index.html  install.ps1  install.sh
internals/: index.html
migration/: index.html
project-config/: index.html
quickstart/: index.html
quickstart-files/: example-help.txt  toolr-help.txt
reference/: index.html
requirements/: base.in  base.txt  build.in  build.txt  changelog.txt  dev.in  dev.txt  docs.in  docs.txt  test.in  test.txt  tools.in  tools.txt
scripts/: bench.py  build-release-manifest.py
search/: search_index.json
skills/: index.html
specs/: 2026-05-11-toolr-rust-front-end-design.md  2026-05-11-toolr-rust-front-end-roadmap.md  2026-05-19-external-command-sources-design.md  2026-05-19-external-command-sources-plan-a.md  2026-05-19-fill-the-gaps-plan.md  2026-05-21-toolr-command-authoring-skill-design.md  2026-05-21-toolr-command-packaging-skill-design.md  2026-05-22-repo-presentation-pass-design.md  2026-05-22-rust-build-manifest-plan.md  2026-05-23-codebase-audit.md  2026-05-27-toolr-ci-setup-plan.md  2026-05-27-toolr-ci-setup-skill-design.md  2026-06-01-mise-enter-auto-sync-design.md  2026-06-01-mise-enter-auto-sync-plan.md  2026-06-03-clap-help-rendering-plan.md  2026-06-10-remove-editable-install-plan.md  2026-06-10-runner-path-hygiene-design.md  README.md  (+3 more)
src/: command.rs  (+6 more)
tests/support/3rd-party-pkg/: README.md  pyproject.toml
tools/: .ruff.toml  .toolr-manifest.json  __init__.py  bench.py  ci.py  pyproject.toml  version.py
tools/precommit/: __init__.py  _common.py  changelog.py  docs.py  workflows.py
(+396 files in other folders)
