[package]
name = "toolr-rust-utils"
version = "0.0.0"  # Not published independently, versioned with Python package
edition = "2021"
authors = ["Pedro Algarvio <pedro@algarvio.me>"]
license = "Apache-2.0"
description = "Rust utilities for ToolR including docstring parsing and command execution"
repository = "https://github.com/s0undt3ch/toolr"

[lib]
name = "_rust_utils"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "toolr"
path = "src/bin/toolr/main.rs"

[dependencies]
pyo3 = { version = ">=0.20", features = ["extension-module"], optional = true }
tokio = { version = ">=1.45.0", features = ["full"] }
libc = ">=0.2"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env", "string", "wrap_help"] }
anyhow = "1"
thiserror = "1"
blake3 = "1"
walkdir = "2"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.14.0" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.14.0" }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = ">=0.3", features = [
    "handleapi",
    "namedpipeapi",
    "processthreadsapi",
    "winnt",
    "fileapi",
    "minwinbase",
] }

[dev-dependencies]
tempfile = ">=3.20"
anyhow = ">=1.0"
libc = ">=0.2"
assert_cmd = "2"

[features]
default = []
python = ["pyo3"]
