[workspace]
members = ["crates/toolr-core", "crates/toolr", "crates/toolr-py"]
resolver = "2"

[workspace.package]
version = "0.11.1"
edition = "2021"
authors = ["Pedro Algarvio <pedro@algarvio.me>"]
license = "Apache-2.0"
repository = "https://github.com/s0undt3ch/toolr"

[workspace.dependencies]
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
blake3 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
uuid = { version = "1", features = ["v4", "serde"] }
libc = "0.2"
email_address = "0.2"
pep440_rs = "0.7"
walkdir = "2"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.15.13" }
ruff_python_ast    = { git = "https://github.com/astral-sh/ruff", tag = "0.15.13" }
tempfile = "3.20"
signal-hook = "0.4"
toml = "1"
dirs = "6"
glob = "0.3"
humansize = "2"
log = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
which = "8"
similar = "3"
clap = { version = "4", features = ["derive", "env", "string", "wrap_help"] }
termimad = "0.34"
pyo3 = { version = "0.28", features = ["extension-module"] }
assert_cmd = "2"

[profile.release]
strip = true
