[project]
name = "toolr-tools"
version = "0.0.0"
description = "Toolr dogfooding tools venv (in-repo only; not published)"
requires-python = ">=3.11"
dependencies = [
    # The `>=` floor is what lets Renovate bump the `uv.lock` pin: a bare
    # `"toolr-py"` has no range to anchor against, so Renovate's pep621
    # manager produces no update and the lock silently drifts (it sat on
    # 0.20.1 until 0.25.0 broke dispatch). With the floor + the
    # `rangeStrategy: update-lockfile` rule in `renovate.json5`, Renovate
    # keeps this floor and bumps only the locked version. Floor = the first
    # release whose runner matches the current binary's dispatch contract.
    "toolr-py>=0.25.0",
    # Comment-preserving YAML round-trip for `toolr ci check-gate-needs`,
    # which rewrites workflow gate `needs` lists in place.
    "ruamel.yaml>=0.18",
]

# `tools/` is intentionally NOT part of the root uv workspace, so
# `toolr-py` resolves from PyPI by default (matching the experience
# of external consumers of the Setup ToolR action). For local
# iteration against an unreleased `crates/toolr-py/`, uncomment the
# block below and run `uv sync --refresh-package toolr-py` to
# install the editable build instead. Don't commit the uncommented
# form — CI relies on PyPI resolution.
#[tool.uv.sources]
#toolr-py = { path = "../crates/toolr-py", editable = true }
