[package]
name = "toolr"
description = "toolr command-line interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "toolr"
path = "src/main.rs"

[dependencies]
toolr-core = { path = "../toolr-core" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
email_address.workspace = true
glob.workspace = true
humansize.workspace = true
pep440_rs.workspace = true
serde_json.workspace = true
termimad.workspace = true
toml.workspace = true
uuid.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
