[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "toolr"
description = "toolr command-line interface (Rust binary distribution)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Pedro Algarvio", email = "pedro@algarvio.me" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "License :: OSI Approved :: Apache Software License",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/s0undt3ch/ToolR"
Documentation = "https://toolr.readthedocs.io"
Issues = "https://github.com/s0undt3ch/ToolR/issues"
Changelog = "https://github.com/s0undt3ch/ToolR/blob/main/CHANGELOG.md"

[tool.maturin]
bindings = "bin"
strip = true
# Require Cargo.lock is up to date
locked = true

[tool.cibuildwheel]
# Binary-only wheel: bindings = "bin" produces py3-none-<plat> wheels
# (Python-version-independent), so we only need cibuildwheel to invoke
# maturin once per platform. Pin to cp311 to avoid building 3 identical
# wheels per platform (one per Python version in the matrix).
skip = "*-win32 *-musllinux_i686"
build = "cp311-*"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.environment]
MACOSX_DEPLOYMENT_TARGET = "11.0"
