[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Maintainer-only tooling for the toolr workspace (skill ref generation, etc.)"

[dependencies]
anyhow.workspace = true
clap.workspace = true
indexmap = { version = "2", features = ["serde"] }
ruff_python_ast.workspace = true
ruff_python_parser.workspace = true
ruff_text_size.workspace = true
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
toolr-core = { path = "../toolr-core" }

[dev-dependencies]
assert_cmd.workspace = true
