[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolr-plugin-example"
version = "1.0.0"
description = "Canonical example of a third-party toolr plugin. Installs commands via a shipped toolr-manifest.json."
authors = [
    { name = "ToolR Maintainers", email = "pedro@algarvio.me" },
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "toolr-py",
]

[tool.hatch.build.targets.wheel]
# Hatchling ships every file inside the `packages` directory by default,
# including non-`.py` files. The committed `toolr-manifest.json` next to
# `__init__.py` therefore lands in the wheel and toolr's CLI can glob it
# from `<tools-venv>/lib/python*/site-packages/toolr_example_plugin/`.
packages = ["src/toolr_example_plugin"]
